scrm 1.7.0-0
============

* Return the TMRCA summary statistic as a data.frame instead of a matrix.


scrm 1.6.0-2
============

* Replaced 'scrm' with 'it' in the package description.


scrm 1.6.0-1
============

* Updated the sources of scrm to version 1.6.0.


scrm 1.5.1-1
============

* Updated the sources of scrm to version 1.5.1.
* Updated the citation information.


scrm 1.5.0-1
============

* Updated the sources of scrm to version 1.5.0.
* Added citation information.
* Replaced callback to warning with Rf_warning (#12). Thanks to J.J. Allaire for
  the patch.


scrm 1.3-3
==========

* Added dependency to R >= 3.1.0.
* Updated the sources of scrm to version 1.3.1.
* Added title to vignettes.


scrm 1.3-2
==========

* Added missing import statement.
* Fixed access to unmapped memory.


scrm 1.3-1
==========

* Initial CRAN release.
