@@ -8,6 +8,8 @@
 #include "scrm/forest.h"
 #include "scrm/model.h"
 #include "scrm/random/fastfunc.h"
+#include "scrm/summary_statistics/newick_tree.h"
+
 
 #include "summary_statistics.h"
 #include "r_random_generator.h"
@@ -98,21 +100,34 @@ List scrm(std::string args, std::string file = "") {
 
   Forest forest = Forest(&model, &rrg);
   List sum_stats = initSumStats(forest);
+  auto stat_newick = getNewickTree(forest);
+  std::string tmp_tree;
 
   // Loop over the independent loci/chromosomes
   for (size_t rep_i=0; rep_i < model.loci_number(); ++rep_i) {
+    CharacterVector newick_trees(0);
 
     // Mark the start of a new independent sample
     if (write_file) fs << std::endl << "//" << std::endl;
 
     // Now set up the ARG, and sample the initial tree
     forest.buildInitialTree();
+    if (write_file) forest.printSegmentSumStats(fs);
+    if (stat_newick != NULL) {
+      tmp_tree = readSegmentTree(stat_newick);
+      if (tmp_tree.size() > 0) newick_trees.push_back(tmp_tree);
+    }
 
     while (forest.next_base() < model.loci_length()) {
       forest.sampleNextGenealogy();
+      if (write_file) forest.printSegmentSumStats(fs);
+      if (stat_newick != NULL) {
+        tmp_tree = readSegmentTree(stat_newick);
+        if (tmp_tree.size() > 0) newick_trees.push_back(tmp_tree);
+      }
     }
 
-    addLocusSumStats(forest, rep_i, sum_stats);
+    addLocusSumStats(forest, rep_i, sum_stats, newick_trees);
     if (write_file) forest.printLocusSumStats(fs);
 
     forest.clear();
