@@ -1,10 +1,10 @@
 /*
  * scrm is an implementation of the Sequential-Coalescent-with-Recombination Model.
- * 
+ *
  * Copyright (C) 2013, 2014 Paul R. Staab, Sha (Joe) Zhu and Gerton Lunter
- * 
+ *
  * This file is part of scrm.
- * 
+ *
  * scrm is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
  * the Free Software Foundation, either version 3 of the License, or
@@ -14,7 +14,7 @@
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  * GNU General Public License for more details.
- * 
+ *
  * You should have received a copy of the GNU General Public License
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
@@ -37,7 +37,9 @@ using namespace Rcpp;
 
 
 List initSumStats(const Forest &forest);
-void addLocusSumStats(const Forest &forest, size_t locus, List &sum_stats);
-
+void addLocusSumStats(const Forest &forest, size_t locus,
+                      List &sum_stats, CharacterVector newick_trees);
+NewickTree* getNewickTree(const Forest &forest);
+std::string readSegmentTree(SummaryStatistic* sum_stat);
 
 #endif
